# gil-perf

./: .gitignore  .python-version  README.md  bench.sh  graph.sh  pyproject.toml  setup.sh
scripts/: plot_histogram.py  plot_parameterised.py  plot_parametrized.py  plot_progression.py  plot_whisker.py
src/gil_perf/: cli.py  common.py  enums.py  logging.py  mandelbrot.py  obrc.py  plot_mandelbrot.py  plotting.py
